# IntimationInc-Workshops

blog-CRUD/: .gitignore  Makefile  Readme.md  pyproject.toml
blog-CRUD/api/: admin.py  models.py  serializers.py  views.py
blog-CRUD/api/migrations/: 0001_initial.py
blog-CRUD/api/tests/: test_api.py  test_serializers.py
blog-CRUD/config/: settings.py  urls.py
pattern-api/: .gitignore  Makefile  README.md  pyproject.toml
pattern-api/blog/: admin.py  apps.py  models.py  serializers.py  urls.py
pattern-api/blog/forms/: __init__.py  blog_post_form.py  comment_form.py  user_form.py
pattern-api/blog/migrations/: 0001_initial.py
pattern-api/blog/serializers/: __init__.py  blog_post_serializer.py  comment_serializer.py  review_serializer.py  reviewer_serializer.py  score_serializer.py  user_serializer.py
pattern-api/blog/views/: __init__.py  blog_api.py  blog_post_api.py  comment_api.py  review_api.py  score_api.py  user_api.py  video_api.py
pattern-api/config/: settings.py  urls.py
pattern-api/data/: mapper.py
pattern-api/data/repository/: __init__.py  db_blog_repository.py  db_comment_repository.py  db_post_score_repository.py  db_review_repository.py  db_user_repository.py  db_user_score_repository.py  db_video_repository.py
pattern-api/di/: __init__.py  comment_use_case.py  post_use_case.py  repository.py  score_use_case.py  use_case.py  user_use_case.py
pattern-api/di/use_case/: __init__.py  comment_use_case.py  miscellaneous_use_case.py  post_use_case.py  review_use_case.py  score_use_case.py  (+2 more)
pattern-api/utility/: __init__.py  get_logger.py
(+68 files in other folders)
