[tool.poetry]
name = "pattern-api"
version = "0.1.0"
description = ""
authors = ["Nasif Raihan <nasif.raihan78@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.8"
djangorestframework = "^3.15.2"
environs = "^11.0.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
